@@ -4912,4 +4912,8 @@ a)"xI
 \=get=i00000000000000000000000000000000
 \=get=i2345678901234567890123456789012,get=i1245678901234567890123456789012
 
+"(?(?C))"
+
+/(?(?(?(?(?(?))))))/
+
 # End of testinput2 
